--- a/Eye-Tracker/Base.lproj/Main.storyboard
+++ b/Eye-Tracker/Base.lproj/Main.storyboard
@@ -10,23 +10,30 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Play View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Eye_Tracker" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="PlayViewController" customModule="Eye_Tracker" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fuZ-w9-B5C">
+                                <rect key="frame" x="271" y="20" width="96" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="fuZ-w9-B5C" secondAttribute="height" multiplier="3:4" id="TxZ-94-TKD"/>
+                                    <constraint firstAttribute="width" constant="96" id="plb-X4-Zwp"/>
+                                </constraints>
+                            </arscnView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q5z-B2-NO2" userLabel="Game View">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="563"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7je-W8-7ri" customClass="TargetView" customModule="Eye_Tracker" customModuleProvider="target">
-                                        <rect key="frame" x="177.5" y="271.5" width="20" height="20"/>
+                                        <rect key="frame" x="157.5" y="251.5" width="60" height="60"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="20" id="AJK-Ai-X0F"/>
-                                            <constraint firstAttribute="width" constant="20" id="J6P-PU-aWd"/>
+                                            <constraint firstAttribute="width" secondItem="7je-W8-7ri" secondAttribute="height" multiplier="1:1" id="8DD-KN-FkR"/>
+                                            <constraint firstAttribute="width" constant="60" id="J6P-PU-aWd"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -42,6 +49,9 @@
                                     <constraint firstAttribute="height" constant="80" id="Jxk-C6-zVb"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="fireAction" destination="BYZ-38-t0r" eventType="touchUpInside" id="3xB-H2-AkO"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VJK-3Q-WTR">
                                 <rect key="frame" x="16" y="36" width="343" height="138"/>
@@ -52,6 +62,50 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xcy-2Q-5fz" userLabel="Aim View">
+                                <rect key="frame" x="123.5" y="269.5" width="128" height="128"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bIw-kI-E07">
+                                        <rect key="frame" x="20" y="63.5" width="88" height="1"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="1" id="2ZU-NC-xeB"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Wv-wx-qKg">
+                                        <rect key="frame" x="63.5" y="20" width="1" height="88"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="1" id="ead-Ip-3Sx"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yE9-ah-dLM">
+                                        <rect key="frame" x="60" y="60" width="8" height="8"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="8" id="TEh-EE-h4J"/>
+                                            <constraint firstAttribute="width" secondItem="yE9-ah-dLM" secondAttribute="height" id="Wvu-FG-zrL"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="bIw-kI-E07" firstAttribute="centerX" secondItem="xcy-2Q-5fz" secondAttribute="centerX" id="1DC-Im-q2e"/>
+                                    <constraint firstItem="bIw-kI-E07" firstAttribute="leading" secondItem="xcy-2Q-5fz" secondAttribute="leading" constant="20" id="3ga-mf-uiM"/>
+                                    <constraint firstAttribute="width" constant="128" id="G4E-8b-im6"/>
+                                    <constraint firstAttribute="height" constant="128" id="GYT-98-5gf"/>
+                                    <constraint firstItem="bIw-kI-E07" firstAttribute="centerY" secondItem="xcy-2Q-5fz" secondAttribute="centerY" id="YWM-fe-4rp"/>
+                                    <constraint firstItem="yE9-ah-dLM" firstAttribute="centerX" secondItem="xcy-2Q-5fz" secondAttribute="centerX" id="c9h-df-gOL"/>
+                                    <constraint firstAttribute="width" secondItem="xcy-2Q-5fz" secondAttribute="height" id="e5B-0M-013"/>
+                                    <constraint firstItem="2Wv-wx-qKg" firstAttribute="centerX" secondItem="xcy-2Q-5fz" secondAttribute="centerX" id="h3g-zN-uPh"/>
+                                    <constraint firstItem="yE9-ah-dLM" firstAttribute="centerY" secondItem="xcy-2Q-5fz" secondAttribute="centerY" id="inY-q1-r22"/>
+                                    <constraint firstItem="2Wv-wx-qKg" firstAttribute="top" secondItem="xcy-2Q-5fz" secondAttribute="top" constant="20" id="lbr-UW-ONt"/>
+                                    <constraint firstAttribute="bottom" secondItem="2Wv-wx-qKg" secondAttribute="bottom" constant="20" id="pZD-y6-vQ0"/>
+                                    <constraint firstAttribute="trailing" secondItem="bIw-kI-E07" secondAttribute="trailing" constant="20" id="rf5-DC-Tvq"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="128" id="sY4-va-bmv"/>
+                                </constraints>
+                                <viewLayoutGuide key="safeArea" id="d1i-z9-33f"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.8392156959" green="0.0" blue="0.19607843459999999" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
@@ -63,14 +117,21 @@
                             <constraint firstItem="VJK-3Q-WTR" firstAttribute="trailing" secondItem="MtW-fZ-t6w" secondAttribute="trailing" id="GCk-ka-s2q"/>
                             <constraint firstItem="VJK-3Q-WTR" firstAttribute="leading" secondItem="MtW-fZ-t6w" secondAttribute="leading" id="JdE-KQ-w4L"/>
                             <constraint firstItem="MtW-fZ-t6w" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="Raz-Gc-I4K"/>
+                            <constraint firstItem="xcy-2Q-5fz" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Vje-67-asp"/>
+                            <constraint firstItem="fuZ-w9-B5C" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="dAF-3x-Sge"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="MtW-fZ-t6w" secondAttribute="bottom" constant="16" id="iw4-DD-nNr"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="fuZ-w9-B5C" secondAttribute="trailing" constant="8" id="prz-uA-Uvf"/>
                             <constraint firstItem="VJK-3Q-WTR" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="16" id="q5H-uR-PVB"/>
+                            <constraint firstItem="xcy-2Q-5fz" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="x2c-kh-Ywz"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="eyePositionIndicatorCenterView" destination="yE9-ah-dLM" id="QR7-H7-e7R"/>
+                        <outlet property="eyePositionIndicatorView" destination="xcy-2Q-5fz" id="23Z-TH-KKs"/>
                         <outlet property="fireButton" destination="MtW-fZ-t6w" id="Wkf-Hs-ei3"/>
                         <outlet property="gameView" destination="Q5z-B2-NO2" id="KiJ-I8-mm5"/>
+                        <outlet property="sceneView" destination="fuZ-w9-B5C" id="q9I-zg-0Z6"/>
                         <outlet property="scoreLabel" destination="VJK-3Q-WTR" id="Iur-3F-aTv"/>
                         <outlet property="targetView" destination="7je-W8-7ri" id="MoJ-ru-Cth"/>
                     </connections>
